--- a/jsnote/3d.md
+++ b/jsnote/3d.md
@@ -1,9 +1,13 @@
 # three.js
-场景Scene,相机Camera,渲染器Renderer   
+
+场景 Scene,相机 Camera,渲染器 Renderer
+
+## TextureLoader
+加载纹理图片，给模型贴图
 
 ## OrbitControls
-相机控件实现旋转缩放预览效果    
-本质上是改变相机参数      
+相机控件实现旋转缩放预览效果  
+本质上是改变相机参数
 
 ## gui.js
 改变场景辅助交互
