--- a/jsnote/3d.md
+++ b/jsnote/3d.md
@@ -2,8 +2,6 @@
 
 场景 Scene,相机 Camera,渲染器 Renderer
 
-## TextureLoader
-加载纹理图片，给模型贴图
 
 ## OrbitControls
 相机控件实现旋转缩放预览效果  
@@ -11,3 +9,16 @@
 
 ## gui.js
 改变场景辅助交互
+
+## TextureLoader
+加载纹理图片，给模型贴图  
+
+## GLTFLoader
+加载gltf模型资源    
+
+### Blender 
+开源3D建模软件
+
+### gltf格式
+三维模型资源,通过JSON的键值对来表示模型信息    
+.glb是.gltf格式的二进制文件    
