--- a/jsnote/3d.md
+++ b/jsnote/3d.md
@@ -22,3 +22,8 @@
 ### gltf格式
 三维模型资源,通过JSON的键值对来表示模型信息    
 .glb是.gltf格式的二进制文件    
+
+### 贝塞尔曲线
+它由一组控制点定义的参数曲线，这些控制点并不直接位于曲线上，通过数学公式间接决定了曲线的形状      
+
+css中通过linear,cubic-bezier,steps，描述属性值在动画中变化快慢的程度    
