--- a/jsnote/3d.md
+++ b/jsnote/3d.md
@@ -24,6 +24,6 @@
 .glb是.gltf格式的二进制文件    
 
 ### 贝塞尔曲线
-它由一组控制点定义的参数曲线，这些控制点并不直接位于曲线上，通过数学公式间接决定了曲线的形状      
+它由一组控制点定义的参数曲线，这些控制点由有规律的数学参数方程来控制，即数学公式决定了曲线的形状      
 
 css中通过linear,cubic-bezier,steps，描述属性值在动画中变化快慢的程度    
