--- a/jsnote/3d.md
+++ b/jsnote/3d.md
@@ -27,3 +27,6 @@
 它由一组控制点定义的参数曲线，这些控制点由有规律的数学参数方程来控制，即数学公式决定了曲线的形状      
 
 css中通过linear,cubic-bezier,steps，描述属性值在动画中变化快慢的程度    
+
+#### 抛物线实现
+将抛物线渲染结构拆分为外层内层2个部分，2个部分分别负责垂直水平2个方向的transition过渡,2个方向设置不同的transition-timing-function，同时执行tanslate移动即可实现抛物线效果    
